--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Application Settings
 
-APP_NAME=CloudSchool
-APP_ENV=production
+APP_NAME=
+APP_ENV=
 APP_KEY=base64:+m0h+ObGNu26eF4MVCgqX1ua0IukSUn7lRYInflNt8A=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -58,7 +58,7 @@ MAIL_ENCRYPTION=tls
 
 # website admin email address for receive contact email
 
-MAIL_RECEIVER=contact@cloudschoolbd.com
+MAIL_RECEIVER=
 MAIL_NO_REPLY_ADDRESS=
 
 
